Update copyright text in footer for Arabic, English, and French translations to reflect the new branding as "klikall".

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -74,6 +74,6 @@
     "weAreHere": "نحن هنا"
   },
   "footer": {
-    "copyright": "© Klik. جميع الحقوق محفوظة."
+    "copyright": "© klikall. جميع الحقوق محفوظة."
   }
 }
