--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -287,6 +287,6 @@
     "weAreHere": "We are here"
   },
   "footer": {
-    "copyright": "© Klik. All rights reserved."
+    "copyright": "© klikall. All rights reserved."
   }
 }
