--- a/src/i18n/fr.json
+++ b/src/i18n/fr.json
@@ -287,6 +287,6 @@
     "weAreHere": "Nous sommes ici"
   },
   "footer": {
-    "copyright": "© Klik. Tous droits réservés."
+    "copyright": "© klikall. Tous droits réservés."
   }
 }
